<resources>
    <string name="app_name">东北农场</string>
    <string name="mine">我的</string>
    <string name="shop_cart">购物车</string>
    <string name="classify">分类</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="add">+</string>
    <string name="reduce">-</string>
    <string name="myOrders">我的订单</string>
    <string name="lookAllOrders">查看全部订单</string>
    <string name="obligation">待付款</string>
    <string name="waitSend">待发货</string>
    <string name="waitReceive">待收货</string>
    <string name="hadCancel">已取消</string>
    <string name="hadFinished">已完成</string>
    <string name="finish">完成</string>
    <string name="onlineService">在线客服</string>
    <string name="feedback">意见反馈</string>
    <string name="setting">设置</string>
    <string name="phoneNum">手机号</string>
    <string name="phoneNumHint">请输入手机号</string>
    <string name="verifyCode">验证码</string>
    <string name="verifyCodeHint">请输入验证码</string>
    <string name="password">密码</string>
    <string name="passwordHint">请输入密码</string>
    <string name="passwordAgain">确认密码</string>
    <string name="passwordAgainHint">请确认密码</string>
    <string name="registerNow">立即注册</string>
    <string name="register">注册</string>
    <string name="getVerifyCode">获取验证码</string>
    <string name="addToShopCart">加入购物车</string>
    <string name="buy">立即购买</string>
    <string name="goodDetail">商品详情</string>
    <string name="sure">确定</string>
    <string name="flavor">口味</string>
    <string name="buyNum">购买数量</string>
    <string name="login">登录</string>
    <string name="passwordOrVerifyCodeHint">密码/验证码</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="selectAll">全选</string>
    <string name="totalMoney">合计金额：</string>
    <string name="goToPay">去结算</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="newPassword">新密码</string>
    <string name="newPasswordHint">请输入新密码</string>
    <string name="newPasswordAgainHint">再次确认新密码</string>
    <string name="newPasswordAgain">确认新密码</string>
    <string name="submit">提交</string>
    <string name="contactService">联系客服</string>
    <string name="helpAndFeedback">帮助与反馈</string>
    <string name="telephone">电话</string>
    <string name="northeastFarm">东北农场</string>
    <string name="wxNum">微信号</string>
    <string name="feedback_">反馈</string>
    <string name="feedbackPath"><![CDATA[个人中心>帮助与反馈>意见反馈]]></string>
    <string name="serviceTime">客服时间</string>
    <string name="serviceTimeValue">9:00-21:00</string>
    <string name="yourPhoneNum">输入您的手机号</string>
    <string name="feedbackHint">输入您的宝贵意见或建议</string>
    <string name="sendVerifyCodeSuccess">发送验证码成功</string>
    <string name="header">头像</string>
    <string name="nickName">昵称</string>
    <string name="sex">性别</string>
    <string name="birthday">出生日期</string>
    <string name="updatePassword">修改密码</string>
    <string name="addressManager">收货地址管理</string>
    <string name="managerAddress">管理收货地址</string>
    <string name="cleanCache">清理缓存</string>
    <string name="about">关于东北农场</string>
    <string name="logout">退出当前账号</string>
    <string name="personalInfo">个人信息</string>
    <string name="updateNickName">修改昵称</string>
    <string name="updateSex">选择性别</string>
    <string name="updateBirthday">修改生日</string>
    <string name="choseSex">请选择您的性别</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="inputNickName">请输入昵称</string>
    <string name="cancel">取消</string>
    <string name="createAddress">+新建收货地址</string>
    <string name="defaultAddress">默认地址</string>
    <string name="consignee">收货人：</string>
    <string name="inputConsignee">输入姓名</string>
    <string name="inputPhoneNum">手机号码：</string>
    <string name="address">收货地址：</string>
    <string name="detailAddress">详细地址：</string>
    <string name="choseAddress">请选择收货地址</string>
    <string name="detailAddressHint">请输入详细地址</string>
    <string name="shop_cart_empty">暂时没有商品</string>
    <string name="album">从相册中选择</string>
    <string name="photo">拍照</string>
    <string name="payNow">立即付款</string>
    <string name="cancelOrder">取消订单</string>
    <string name="submitOrder">提交订单</string>
    <string name="receiverInfo">收货人信息</string>
    <string name="addReceiver">添加收货人信息</string>
    <string name="subtotal">小计：</string>
    <string name="affirmOrder">确认订单</string>
    <string name="payMoney">支付金额</string>
    <string name="zhifubao">支付宝</string>
    <string name="weixin">微信</string>
    <string name="pay">支付</string>
    <string name="dataEmpty">空空如也</string>
    <string name="deleteOrder">删除订单</string>
    <string name="sureOrder">确认订单</string>
    <string name="salesReturn">退货</string>
    <string name="moneyReturn">退款</string>
    <string name="sureReceive">确认收货</string>
    <string name="waitPay">等待付款</string>
    <string name="freight">运费</string>
    <string name="shouldPay">应付金额(含运费)</string>
    <string name="orderNum">订单编号：</string>
    <string name="createTime">创建时间：</string>
    <string name="orderDetail">订单详情</string>
    <string name="refundClosed">退款关闭</string>
    <string name="refundHint">您已成功发起退款申请，请耐心等待处理</string>
    <string name="repealRefund">撤销申请</string>
    <string name="updateApply">修改申请</string>
    <string name="refunfHintSub">审核成功后将会退款给您</string>
    <string name="hadRepealHint">您已撤销此退款申请</string>
    <string name="refundInfo">退款信息</string>
    <string name="refundMoney">退款金额：</string>
    <string name="refundTime">退款时间：</string>
    <string name="refundDetail">退款详情</string>
    <string name="expressCompany">物流公司</string>
    <string name="choseExpress">请选择物流公司</string>
    <string name="expressNum">物流单号：</string>
    <string name="expressHint">请输入物流单号</string>
    <string name="saleReturnCaseHint">请填写退货原因</string>
    <string name="moneyReturnCase">退款原因</string>
    <string name="skip">跳过</string>
    <string name="company">研发公司</string>
    <string name="companyName">南京关谷信息科技有限公司</string>
    <string name="goodComment">商品评价</string>
    <string name="seeAllComments">查看全部评价</string>
    <string name="all">全部</string>
    <string name="goodComment1">好评</string>
    <string name="mediumComment">中评</string>
    <string name="badComment">差评</string>
    <string name="haveImg">有图</string>
    <string name="discountCode">折扣码</string>
    <string name="commentHint">宝贝符合您的期待吗?写下你的使用心得,分享给想买的他们吧.</string>
    <string name="starLevel">星级</string>
    <string name="commentOrder">评价商品</string>
    <string name="phoneNumLab">手机号码：</string>
    <string name="integral">积分</string>
    <string name="expressInfo">查看物流</string>
    <string name="expressPriceLab">运费：</string>
    <string name="wx">微信</string>
    <string name="friendCircle">朋友圈</string>
    <string name="slogan">生活就应该吃点不一样的哦</string>
    <string name="payTypeLab">支付方式：</string>
    <string name="payMoneyLab">支付金额：</string>
    <string name="goOrder">查看订单</string>
    <string name="QQ">QQ</string>
</resources>
