<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_cancel_header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/cancel" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/c_f5f3f3" />

    <TextView
        android:id="@+id/tv_photo_header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/photo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/c_eaeaea" />

    <TextView
        android:id="@+id/tv_album_header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/album" />


</LinearLayout>