<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_f5f3f3"
    android:orientation="vertical"
    tools:context="com.xwtec.androidframe.ui.address.CreateAddressActivity">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <TextView
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/consignee"
            android:textColor="@color/c_333333"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_consignee"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/inputConsignee"
            android:textColor="@color/c_333333"
            android:textColorHint="@color/c_999999"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/c_eaeaea" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <TextView
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/phoneNum"
            android:textColor="@color/c_333333"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/phoneNumHint"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/c_333333"
            android:textColorHint="@color/c_999999"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/c_eaeaea" />

    <LinearLayout
        android:id="@+id/ll_chose_address"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <TextView
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/c_333333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/choseAddress"
            android:textColor="@color/c_999999"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/jinru" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <TextView
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/detailAddress"
            android:textColor="@color/c_333333"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_detail_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/detailAddressHint"
            android:textColor="@color/c_333333"
            android:textColorHint="@color/c_999999"
            android:textSize="14sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_set_default"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <TextView
            android:layout_width="76dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/defaultAddress"
            android:textColor="@color/c_333333"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@drawable/check_bg" />

    </RelativeLayout>


</LinearLayout>
