<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/ll_comment"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xwtec.androidframe.ui.comments.CommentsActivity">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:id="@+id/ll_tabs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/all"
            android:textColor="@drawable/tab_txt_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_good_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goodComment1"
            android:textColor="@drawable/tab_txt_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_medium_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mediumComment"
            android:textColor="@drawable/tab_txt_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_bad_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/badComment"
            android:textColor="@drawable/tab_txt_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_have_img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/haveImg"
            android:textColor="@drawable/tab_txt_color"
            android:textSize="15sp" />


    </LinearLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/smart_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"/>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>
