<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_f5f3f3"
    android:orientation="vertical"
    tools:context="com.xwtec.androidframe.ui.updatePassword.UpdatePasswordActivity">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/phoneNum"
            android:textColor="@color/c_333333"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/phoneNumHint"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/c_333333"
            android:textColorHint="@color/c_999999"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/c_eaeaea" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/verifyCode"
            android:textColor="@color/c_333333"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_verify_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/verifyCodeHint"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/c_333333"
            android:textColorHint="@color/c_999999"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_get_verify_code"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/get_code_bg"
            android:gravity="center"
            android:text="@string/getVerifyCode"
            android:textColorHint="@color/c_2eb167"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/c_eaeaea" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/newPassword"
            android:textColor="@color/c_333333"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/newPasswordHint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/c_333333"
            android:textColorHint="@color/c_999999"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/c_eaeaea" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/buy_btn_bg"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>
