<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:id="@+id/ll_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tab_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/tab_home"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@drawable/tab_txt_color" />

        <TextView
            android:id="@+id/tab_classify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/tab_classify"
            android:gravity="center"
            android:text="@string/classify"
            android:textColor="@drawable/tab_txt_color" />

        <TextView
            android:id="@+id/tab_shop_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/tab_shop_cart"
            android:gravity="center"
            android:text="@string/shop_cart"
            android:textColor="@drawable/tab_txt_color" />

        <TextView
            android:id="@+id/tab_mine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="6dp"
            android:drawableTop="@drawable/tab_mine"
            android:gravity="center"
            android:text="@string/mine"
            android:textColor="@drawable/tab_txt_color" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/ll_tabs"
        android:background="@color/c_e7e7e7" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/divider" />
</RelativeLayout>